# LingxiDiagBench

./: .env_example  .gitignore  README.md  README_zh.md  gpu_manager.py  install.sh  main_parallel.py  preload_diagnosis.py  pyproject.toml  requirements.txt  run_doctor_eval.sh  run_patient_eval.sh  run_static_benchmark.sh  setup_env.sh  start_patient_api.sh  start_patient_test_ui.sh  vllm_serve_all.sh
emr_generation/: requirements.txt  run.sh
emr_generation/mapping/: diagnosis_code_mapping.json  distribution_mapping.json  keyword_mapping.json  symptoms_mapping.json
emr_generation/post_process/: run_pipeline.py  v0_quality_check.py  v0tov1_complete_history.py  v0tov1_fix_all_problems.py  v1tov2_fill_pregnancy_for_male.py  v2tov3_fix_format.py  v3tov4_fix_dialogue_duplicates.py  v3tov4_fix_physical_history.py  v4tov5_detect_inconsistency.py  v4tov5_fix_inconsistency.py  v5tov6_fix_personality_gender.py  v6tov7_detect_unreasonableness.py  v6tov7_fix_with_anchors.py  v6tov7_iterative_fix.py  v6tov7_merge_results.py  validate_step.py  version
emr_generation/scripts/: analyze_data.py  extract_mapping.py  extract_symptoms.py  fix_age_distribution.py  fix_chief_complaint_duration.py  fix_comorbidity.py  fix_empty_chief_complaint.py  fix_percent_quantification.py  fix_present_illness_demographics.py  fix_present_illness_duration.py  generate_emr.py  run_pipeline.py
emr_generation/src/: __init__.py  config.py
evaluation/: __init__.py  batch_doctor_eval.py  batch_patient_eval.py  doctor_eval_multilabel.py  llm_client.py  reevaluate_patient_results.py  run_benchmark_static.sh  unified_doctor_eval.py  unified_patient_eval.py
evaluation/static/: __init__.py  benchmark_runner.py  bert_classifier.py  compare_sample_sizes.py  config.py  data_utils.py  llm_zeroshot_classifier.py  metrics.py  next_utterance_predictor.py  preprocess_data.py  requirements.txt  roberta_classifier.py  run_benchmark.py  tfidf_classifier.py
knowledge_base/indices/: faiss_index.chunks.pkl  faiss_index.config.json
patient_test_ui/backend/: agents.py  app.py  auth.py  config.py  excel_loader.py  interaction_log.py  session_manager.py  utils.py
patient_test_ui/data/: icd10_mental_disorders.json  icd10_mental_disorders_hierarchical.json  users.json
patient_test_ui/frontend/: app.js  diagnosis-details.js  (+2 more)
scripts/: build_knowledge_base.py  huggingface_download.py
src/: __init__.py
(+66 files in other folders)
